<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="cd_donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="cd_ice_cream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="cd_froyo">FroYo is premium self-serve frozen yogurt.</string>


    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="order_starter">Order: </string>
    <string name="name">Name</string>
    <string name="hint_enter_your_name">Enter your name</string>
    <string name="address">Address</string>
    <string name="hint_enter_address">Enter Address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="note">Note</string>
    <string name="enter_note">Enter Note</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string name="rb_sameday_option">Same day messenger service</string>
    <string name="rb_nextday_option">Next day ground delivery</string>
    <string name="rb_pickup_option">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="title_activity_order">Order Activity</string>


</resources>
