<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_order"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:text="Order:"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_order"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_name_text"
            android:hint="@string/hint_enter_your_name"
            app:layout_constraintStart_toEndOf="@+id/tv_name_label"
            android:layout_marginStart="24dp" android:layout_marginLeft="24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_name_label"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_address_label"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_label"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/et_address_text"
            android:hint="@string/hint_enter_address"
            app:layout_constraintStart_toEndOf="@+id/tv_address_label" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_name_text"/>
    <TextView
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_phone_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_address_text" android:layout_marginTop="24dp"/>
    <EditText
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/et_phone_text"
            android:hint="@string/enter_phone"
            app:layout_constraintStart_toEndOf="@+id/tv_phone_label"
            android:layout_marginStart="24dp" android:layout_marginLeft="24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_phone_label"/>
    <TextView
            android:text="@string/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_note_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/et_phone_text"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint="@string/enter_note"
            app:layout_constraintStart_toEndOf="@+id/tv_note_label"
            android:layout_marginStart="24dp" android:layout_marginLeft="24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_note_label"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_delivery_label"
            android:text="@string/choose_a_delivery_method" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rb_nextday"
            app:layout_constraintTop_toBottomOf="@+id/tv_delivery_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            android:orientation="vertical" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/rb_sameday_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rb_sameday"
                android:onClick="onRadioButtonClicked"/>
        <RadioButton
                android:text="@string/rb_nextday_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rb_nextday"
                android:onClick="onRadioButtonClicked"/>
        <RadioButton
                android:text="@string/rb_pickup_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rb_pickup"
                android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sp_label"
            app:layout_constraintStart_toEndOf="@+id/et_phone_text"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/et_address_text"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>